--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/me.jpeg" class="about-me__picture" alt="Picture of me!">
+                        <img src="./assets/jarrett-image.jpg" class="about-me__picture" alt="Picture of me!">
                     </figure>
                     <h1 class="about-me__info--title">
                         Hey! I'm <span class="text--purple">Jarrett Ferris</span>&nbsp;<span class="wave">👋</span>
